Added Swagger, improved filters and efficiency in functions
