# src/schemas/openapi.json
@@ -28,6 +28,75 @@
     "url": "https://github.com/diego-scarpati/THMP"
   },
   "paths": {
+    "/api/coverLetters/getAll": {
+      "get": {
+        "tags": [
+          "Cover Letter"
+        ],
+        "summary": "Get all Cover Letters",
+        "description": "Get all Cover Letters",
+        "responses": {
+          "200": {
+            "description": "A list of Cover Letters",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CoverLetter"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/api/coverLetter/getAll/:id": {
+      "get": {
+        "tags": [
+          "Cover Letter"
+        ],
+        "summary": "Get Cover Letter by id",
+        "description": "Get all Cover Letter by id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "User ID",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "CoverLetter object",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CoverLetter"
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Cover Letter not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
     "/api/jobs/getAll": {
       "get": {
         "tags": [
@@ -41,6 +110,55 @@
             "content": {
               "application/json": {
                 "schema": {
+                  "type": "object",
+                  "properties": {
+                    "total": {
+                      "type": "integer",
+                      "description": "Total number of jobs",
+                      "example": 10
+                    },
+                    "jobs": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/Job"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/api/jobs/getAll/:id": {
+      "get": {
+        "tags": [
+          "Job"
+        ],
+        "summary": "Get job by id",
+        "description": "Get job by id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Job ID",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Job object",
+            "content": {
+              "application/json": {
+                "schema": {
                   "type": "array",
                   "items": {
                     "$ref": "#/components/schemas/Job"
@@ -48,6 +166,182 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "Job not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/api/jobs/searchAndCreate": {
+      "post": {
+        "tags": [
+          "Job"
+        ],
+        "summary": "Search and create jobs",
+        "description": "Searches for jobs based on the keywords and creates them in the database",
+        "parameters": [
+          {
+            "name": "keywords",
+            "in": "path",
+            "description": "Keywords to search for",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "software engineer"
+            }
+          },
+          {
+            "name": "locationId",
+            "in": "path",
+            "description": "Location ID to search for jobs",
+            "required": false,
+            "schema": {
+              "type": "number",
+              "example": "104769905 (Sydney, Australia)",
+              "default": 104769905
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Job object",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "Created 25 jobs out of 25"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Missing query params"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/api/jobs/approveByGPT": {
+      "patch": {
+        "tags": [
+          "Job"
+        ],
+        "summary": "Approve jobs by GPT",
+        "description": "Route that checks on jobs that are pending approval by GPT, are easy to apply to, have been approved by the formula. According to an uploaded resume and the job description, the job is approved or rejected by chatgpt model 4 turbo.",
+        "responses": {
+          "200": {
+            "description": "Job object",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "Jobs approved: 5 out of 10"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/api/jobDescriptions/getAll": {
+      "get": {
+        "tags": [
+          "Job Description"
+        ],
+        "summary": "Get all job descriptions",
+        "description": "Get all job descriptions",
+        "responses": {
+          "200": {
+            "description": "A list of job descriptions",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/JobDescription"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/api/jobDescriptions/getAll/:id": {
+      "get": {
+        "tags": [
+          "Job Description"
+        ],
+        "summary": "Get job description by id",
+        "description": "Get job description by id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Job Description ID",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Job description object",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/JobDecription"
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Job description not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/api/jobDecriptions/loopAndCreate": {
+      "post": {
+        "tags": [
+          "Job Description"
+        ],
+        "summary": "Search, create job descriptions and loop",
+        "description": "Searches for the specific job descriptions and creates them after being filtered by some custom formulas.",
+        "responses": {
+          "200": {
+            "description": "Job object",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "example": "Job descriptions created: 5 out of 10. 0 job descriptions already created."
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Missing query params"
           },
           "500": {
             "description": "Internal server error"
@@ -82,6 +376,48 @@
         }
       }
     },
+    "/api/keywords/getAll/:id": {
+      "get": {
+        "tags": [
+          "Keyword"
+        ],
+        "summary": "Get keywords by id",
+        "description": "Get all keywords by id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "User ID",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Keyword object",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Keyword"
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Keyword not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
     "openapi": {
       "0": "3",
       "1": ".",
@@ -101,6 +437,23 @@
   },
   "components": {
     "schemas": {
+      "Cover Letter": {
+        "type": "object",
+        "required": [
+          "id",
+          "keyword"
+        ],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "coverLetter": {
+            "type": "string",
+            "example": "I am writing to express my interest in the Software Engineer position at your company. I have experience with Python, Django, and React. I have worked on projects that involve building web applications using these technologies. I am confident that I can contribute to your team and help you achieve your goals. I am excited about the opportunity to work with your company and look forward to hearing from you soon."
+          }
+        }
+      },
       "Job": {
         "type": "object",
         "required": [
@@ -186,6 +539,51 @@
               "$ref": "#/components/schemas/Keyword"
             },
             "description": "The keywords of the job"
+          }
+        }
+      },
+      "Job Description": {
+        "type": "object",
+        "required": [
+          "id",
+          "state",
+          "description"
+        ],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "state": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string",
+            "example": "We are looking for a Software Engineer to join our team. You will be working on a project that is related to the development of a new product. The ideal candidate will have experience with Python, Django, and React. You will be working with a team of developers to build the product. If you are interested in this position, please apply now!"
+          },
+          "companyApplyUrl": {
+            "type": "string",
+            "example": "https://www.linkedin.com/jobs/view/1234567890/"
+          },
+          "easyApplyUrl": {
+            "type": "string",
+            "example": "https://www.linkedin.com/jobs/view/1234567890/"
+          },
+          "workRemoteAllowed": {
+            "type": "boolean",
+            "example": false
+          },
+          "workPlace": {
+            "type": "string",
+            "example": "New York, NY"
+          },
+          "formattedExperienceLevel": {
+            "type": "string",
+            "example": "Entry level"
+          },
+          "skills": {
+            "type": "string",
+            "example": "Python, Django, React"
           }
         }
       },
